--- a/PROJETO-SILVIO-TRIBUTO/CSS/styles.css
+++ b/PROJETO-SILVIO-TRIBUTO/CSS/styles.css
@@ -26,3 +26,14 @@ html {
 .titulo-principal {
 	font-size: 40px;
 }
+
+.paragrafo-principal {
+	font-style: italic;
+}
+
+/* corpo do site */
+
+.img-destaque {
+	text-align: center;
+	margin-top: 30px;
+}
