--- a/PROJETO 4/css/style.css
+++ b/PROJETO 4/css/style.css
@@ -17,3 +17,29 @@ body {
   .nav-list {
     padding: 0 25px;
   }
+  
+  .nav-list li {
+    display: inline-block;
+    list-style: none;
+    padding: 5px 10px;
+  }
+  
+  .nav-list li a {
+    color: #5F6368;
+    text-decoration: none;
+  }
+  
+  .nav-list li a:hover {
+    text-decoration: underline;
+  }
+  
+  #social-bar {
+    text-align: right;
+  }
+  
+  /*Corpo do site*/
+
+  #body {
+    text-align: center;
+  }
+  
