--- a/PROJETO 5/css/styles.css
+++ b/PROJETO 5/css/styles.css
@@ -1,6 +1,6 @@
 /*GERAL*/
 
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: Arial;
@@ -13,10 +13,34 @@
     height: 100vh;
 }
 
-#address-container, #form-container{
+#address-container,
+#form-container {
     flex: 1 1 0;
     height: 100%;
     text-align: center;
 
 }
 
+/*ADRESS CONTAINER*/
+
+#address-container {
+    background-image: url(/img/project_bg.jpg);
+    background-size: cover;
+    background-position-x: -130px;
+    color: #FFF;
+    position: relative;
+}
+
+.fade {
+    width: 100%;
+    height: 100%;
+    background: #000;
+    opacity: .7;
+}
+
+#adress-content {
+    position: absolute;
+    top: 25vh;
+    left: 35%;
+    width: 300px;
+}
